# fte-viewer

./: DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  README.md  package-lock.json  package.json  vercel.json
.github/workflows/: deploy.yml
backend/: BACKEND_SUMMARY.md  README.md  all_fte_data_1.json  analyze_versions.py  example.py  multi_version_codes.json  no_fte_links_debug.json  pyproject.toml  requirements.txt  scrapper.py  setup.py
public/: all_fte_data.json  all_fte_data_oritinal.json  index.html
src/: App.css  App.js
